load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "runsd_lib",
    srcs = glob(
        ["runsd/**"],
        exclude = ["runsd/dns_test.go"]
    ),
    importpath = "cloud_run_proxy/runsd",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_miekg_dns//:dns",
        "@io_k8s_klog_v2//:klog",
        "@org_golang_x_net//http2",
        "@org_golang_x_net//http2/h2c",
    ],
)

go_binary(
    name = "runsd",
    embed = [":runsd_lib"],
    visibility = ["//visibility:public"],
)
